[package]
name = "juke"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr", "nightly"] }
leptos_router = {version = "0.7.0", features = ["nightly"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = {version = "1.0.133"}
